# tornaracasa_address

./: .gitignore  Dockerfile  dockerfile  main.py  pyproject.toml
app/: main.py
app/database/: __init__.py  database.py  models.py
app/pydantic_models/: __init__.py  models.py
app/routers/: address.py  forms.py
database/: __init__.py  database.py  models.py
pydantic/: models.py
routers/: address.py  forms.py  validation.py
scripts/: read_factura.py
